Add screenshot of load on macbook: it's using the GPU

--- a/finetune_object_detection_model.ipynb
+++ b/finetune_object_detection_model.ipynb
@@ -2016,11 +2016,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The load on my macbook pro during training:\n",
+    "\n",
+    "![GPUs fully used](macbook-pro-load-during-training.png)"
+   ]
   }
  ],
  "metadata": {
